[tool.poetry]
name = "tvdatafeed"
version = "2.1.0"
description = "TradingView historical data downloader"
authors = ["Anselmo Araujo <anselmoaraujo@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^80.9.0"
pandas = "^2.3.1"
websocket-client = "^1.8.0"
requests = "^2.32.5"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
